Whitespace characters are used to control spacing - fix

--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -68,6 +68,10 @@ ul li {
   width: 1px;
 }
 
+.small-left-padding {
+    padding-left: 0.5rem;
+}
+
 @media (max-width: 410px) {
     .MainContainer {
         padding-bottom: 41rem; /* height of your footer */
