--- a/sass/pages/calendar.scss
+++ b/sass/pages/calendar.scss
@@ -32,6 +32,7 @@
 
 .Legend-box--unavailable {
     background: url('../images/unavailable_tile.png');
+    margin-left: 1.5rem;
 }
 
 // Calendar Section
