--- a/sass/pages/confirmation.scss
+++ b/sass/pages/confirmation.scss
@@ -31,6 +31,10 @@
 	margin-bottom: 0.5rem;
 }
 
+.top-large-padding {
+	padding-top: 2.5rem;
+}
+
 .section-title {
 	margin-top: 2rem;
 	font-size: 2rem;
